# packweave

./: .editorconfig  .gitignore  .prettierrc  COPYING.md  TRADEMARKS.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
installer/: Packweaver.java
src/: App.svelte  api.ts  app.css  highlight.ts  main.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bulkadd.rs  cache.rs  cfpack.rs  changelog.rs  content.rs  curseforge.rs  dist.rs  download.rs  dropped.rs  fsbrowse.rs  git.rs  github.rs  import.rs  instance.rs  launchers.rs  lockfile.rs  main.rs  manifest.rs  modmeta.rs  modrinth.rs  mrpack.rs  nbt.rs  packdiff.rs  packlocal.rs  providers.rs  ptype.rs  publish.rs  resolver.rs  search.rs  secrets.rs  sync.rs  validate.rs
src-tauri/src/commands/: catalog.rs  content_ops.rs  exports.rs  files.rs  gitops.rs  instances.rs  mod.rs  pack.rs  settings.rs
src/components/: AddPalette.svelte  AuthModal.svelte  CloneModal.svelte  CommandPalette.svelte  ContentView.svelte  DropModal.svelte  ExportModal.svelte  FilesView.svelte  InstancePicker.svelte  InstanceView.svelte  IntroModal.svelte  NewPackModal.svelte  PackSettings.svelte  SearchPanel.svelte  SemanticDiff.svelte  SettingsModal.svelte  SourceView.svelte  StartPackModal.svelte  ToastHost.svelte  Toolbar.svelte  WelcomeView.svelte  WindowControls.svelte
src/lib/: autofocus.ts  codeedit.ts  mods.ts  (+8 more)
(+30 files in other folders)
